<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_triangle_calculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_triangle_calculator"
        tools:context="shapirohousehold.com.shapecalculator.TriangleCalculator">

    <EditText
            android:id="@+id/txtTriangleSideA"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:hint="@string/hint_triangle_side_a"/>

    <TextView
            android:id="@+id/lblTriangleSideA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_triangle_side_A"
            android:layout_toLeftOf="@id/txtTriangleSideA"
            android:layout_alignBottom="@id/txtTriangleSideA"
            android:textAlignment="textEnd"
            android:textSize="@dimen/label_font_size"/>

    <EditText
            android:id="@+id/txtTriangleSideB"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTriangleSideA"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_triangle_side_b"
            android:inputType="numberDecimal"/>

    <TextView
            android:id="@+id/lblTriangleSideB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_triangle_side_B"
            android:layout_toLeftOf="@id/txtTriangleSideB"
            android:layout_alignBottom="@id/txtTriangleSideB"
            android:textAlignment="textEnd"
            android:textSize="@dimen/label_font_size"/>

    <EditText
            android:id="@+id/txtTriangleSideC"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTriangleSideB"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_triangle_side_c"
            android:inputType="numberDecimal"/>

    <TextView
            android:id="@+id/lblTriangleSideC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_triangle_side_C"
            android:layout_toLeftOf="@id/txtTriangleSideC"
            android:layout_alignBottom="@id/txtTriangleSideC"
            android:textAlignment="textEnd"
            android:textSize="@dimen/label_font_size"/>

    <TextView
            android:id="@+id/lblTriangleArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_below="@id/txtTriangleSideC"
            android:layout_marginTop="25dp"/>

    <TextView
            android:id="@+id/lblTrianglePerimeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_below="@id/lblTriangleArea"
            android:layout_marginTop="25dp"/>

    <ImageView
            android:id="@+id/imgTrianglesWithSidesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTrianglePerimeter"
            android:src="@drawable/triangles_with_sides"/>

</RelativeLayout>
