<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main_menu"
        tools:context="shapirohousehold.com.shapecalculator.MainMenu">

    <Button
            android:id="@+id/btnOpenRectangle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_rectangle"
            android:onClick="openRectangleCalculator"/>

    <Button
            android:id="@+id/btnOpenCircle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnOpenRectangle"
            android:text="@string/title_activity_circle_calculator"
            android:onClick="openCircleCalculator"/>

    <Button
            android:id="@+id/btnOpenTriangle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btnOpenCircle"
            android:text="@string/title_activity_triangle_calculator"
            android:onClick="openTriangleCalculator"/>

</RelativeLayout>
