<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/content_circle_calculator"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:showIn="@layout/activity_circle_calculator"
tools:context="shapirohousehold.com.shapecalculator.CircleCalculator">

    <EditText
            android:id="@+id/txtCircleRadius"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/column_gap"
            android:inputType="numberDecimal"
            android:hint="@string/hint_radius"/>

    <TextView
            android:id="@+id/lblRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radius"
            android:textSize="20sp"
            android:layout_alignBottom="@id/txtCircleRadius"
            android:layout_toLeftOf="@id/txtCircleRadius"/>

    <EditText
            android:id="@+id/txtCircleCircumference"
            android:layout_below="@id/txtCircleRadius"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/column_gap"
            android:inputType="numberDecimal"
            android:hint="@string/hint_circumference"/>

    <TextView
            android:id="@+id/lblCircleCircumference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Circumference"
            android:textSize="15sp"
            android:layout_alignBottom="@id/txtCircleCircumference"
            android:layout_toLeftOf="@id/txtCircleCircumference"/>

    <EditText
            android:id="@+id/txtCircleArea"
            android:layout_width="@dimen/entry_column_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCircleCircumference"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/column_gap"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:hint="@string/hint_circle_area"/>

    <TextView
            android:id="@+id/lblCircleArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/txtCircleArea"
            android:layout_alignBottom="@id/txtCircleArea"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:text="Area"/>

    <ImageView
            android:id="@+id/imgCircleAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_attributes"
            android:layout_below="@id/lblCircleArea"/>
</RelativeLayout>
